[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
plotters={version = "^0.3.0", default-features = false, features = ["evcxr", "all_series"]}
csv = "1.3.1"
ndarray = { version = "0.15", features = ["approx"] }
serde = { version = "1.0.219", features = ["derive"] }
linfa = { git = "https://github.com/rust-ml/linfa" }
linfa-trees = { git = "https://github.com/rust-ml/linfa" }

[lib]
name = "libs"
path = "src/lib/lib.rs"
